<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_project_switch_menu_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/switch_menu"
        android:textSize="18sp"
        android:padding="6dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:text="@string/switch_animation" />

            <com.android.builtindata.MyGridView
                android:id="@+id/single_choice_view_animation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:numColumns="3"
                android:focusable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:text="@string/switch_rom" />

            <com.android.builtindata.MyGridView
                android:id="@+id/single_choice_view_rom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:numColumns="3"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:text="@string/switch_ram" />

            <com.android.builtindata.MyGridView
                android:id="@+id/single_choice_view_ram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="3"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:text="@string/switch_model" />

            <com.android.builtindata.MyGridView
                android:id="@+id/single_choice_view_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="3"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:text="@string/switch_single" />

            <com.android.builtindata.MyGridView
                android:id="@+id/single_choice_view_single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="3"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:text="@string/switch_platform" />

            <com.android.builtindata.MyGridView
                android:id="@+id/single_choice_view_platform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="3"
                android:padding="8dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
